<resources>
    <string name="app_name">AbsPlan</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="calendar_week">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>

    <string-array name="calendar_month">
        <item>一月</item>
        <item>二月</item>
        <item>三月</item>
        <item>四月</item>
        <item>五月</item>
        <item>六月</item>
        <item>七月</item>
        <item>八月</item>
        <item>九月</item>
        <item>十月</item>
        <item>十一月</item>
        <item>十二月</item>
    </string-array>

    <string name="key_settings_about">key_settings_about</string>
    <string name="key_settings_skin">key_settings_skin</string>
    <string name="key_settings_feedback_suggestion">key_settings_feedback_suggestion</string>
    <string name="key_settings_preference">key_settings_preference</string>
    <string name="key_settings_service_support">key_settings_service_support</string>
    <string name="key_settings_wallpaper_bg">key_settings_wallpaper_bg</string>
    <string name="wisdom">凡事预则立，不预则废。</string>
    <string name="wisdom_source">——《礼记.中庸》</string>
</resources>
