<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings_preference="http://schemas.android.com/apk/res-auto">

    <com.woodsho.absoluteplan.widget.AbsPlanPreferenceCategory
        android:key="@string/key_settings_preference"
        android:persistent="false"
        settings_preference:title="偏好">

        <com.woodsho.absoluteplan.widget.AbsPlanPreference
            android:key="@string/key_settings_skin"
            settings_preference:title="换肤" />

    </com.woodsho.absoluteplan.widget.AbsPlanPreferenceCategory>

    <com.woodsho.absoluteplan.widget.AbsPlanPreferenceCategory
        android:key="@string/key_settings_service_support"
        android:persistent="false"
        settings_preference:title="服务支持">

        <com.woodsho.absoluteplan.widget.AbsPlanPreference
            android:key="@string/key_settings_about"
            settings_preference:title="关于" />


        <com.woodsho.absoluteplan.widget.AbsPlanPreference
            android:key="@string/key_settings_feedback_suggestion"
            settings_preference:title="反馈与建议" />

    </com.woodsho.absoluteplan.widget.AbsPlanPreferenceCategory>

</PreferenceScreen>